plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.0.4'
	id 'io.spring.dependency-management' version '1.1.0'
	id "org.sonarqube" version "3.5.0.2730"
}

group = 'ar.edu.unq.grupok'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenLocal()
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.jetbrains:annotations:20.1.0'
	implementation 'org.jetbrains:annotations:20.1.0'
	implementation 'org.passay:passay:1.6.2'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'
	
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}


sonarqube {
  properties {
    property "sonar.projectKey", "unq-desapp-grupo-k-202301"
    property "sonar.organization", "ivanjoshua98"
    property "sonar.host.url", "https://sonarcloud.io"
  }
}

tasks.named('test') {
	useJUnitPlatform()
}


